--- a/Assignments/A0-LinAlgComplex.ipynb
+++ b/Assignments/A0-LinAlgComplex.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shonak Shah\n",
-    "\n",
-    "A13497236\n",
-    "\n",
-    "COGS 118C - Assignment 0"
+    "- Shonak Shah\n",
+    "- A13497236\n",
+    "- COGS 118C - Assignment 0"
    ]
   },
   {
